5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4014/executions/1712_2506.log
== SUBMITION (2019-05-15 09:53:15) 
-- CODE:
q1= =int(input("qyantidade inicial de tamabaqui: "))
p1=float(input("percentual de crescimento: "))
q2=int(input("tambaqui para venda: "))
a=q1
t=0
while (a<12000) and (a>0) and (p1>0) and (q2>0):
	t=t+1
	a=a+(a*(p1/100))
	a=a-q2
if(a>=12000):
	print("LIMITE")
	print(t)
else:
	print("EXTINCAO")
	print(t)
-- EXECUTION TIME:
0.131179
-- ERROR:
  File "/home/codebench/codes/1712/2506/main.py", line 1
    q1= =int(input())
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 09:54:12) 
-- CODE:
q1= =int(input("quantidade inicial de tamabaqui: "))
p1=float(input("percentual de crescimento: "))
q2=int(input("tambaqui para venda: "))
a=q1
t=0
while (a<12000) and (a>0) and (p1>0) and (q2>0):
	t=t+1
	a=a+(a*(p1/100))
	a=a-q2
if(a>=12000):
	print("LIMITE")
	print(t)
else:
	print("EXTINCAO")
	print(t)
-- EXECUTION TIME:
0.120791
-- ERROR:
  File "/home/codebench/codes/1712/2506/main.py", line 1
    q1= =int(input())
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 09:55:25) 
-- CODE:
q1= =int(input("quantidade inicial de tamabaqui: "))
p1=float(input("percentual de crescimento: "))
q2=int(input("tambaqui para venda: "))
a=q1
t=0
while (a<12000) and (a>0) and (p1>0) and (q2>0):
	t=t+1
	a=a+(a*(p1/100))
	a=a-q2
if(a>=12000):
	print("LIMITE")
	print(t)
else:
	print("EXTINCAO")
	print(t)
-- ERROR:
File "XXXX", line 1
    q1= =int(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 09:56:35) 
-- CODE:
q1=int(input("quantidade inicial de tamabaqui: "))
p1=float(input("percentual de crescimento: "))
q2=int(input("tambaqui para venda: "))
a=q1
t=0
while (a<12000) and (a>0) and (p1>0) and (q2>0):
	t=t+1
	a=a+(a*(p1/100))
	a=a-q2
if(a>=12000):
	print("LIMITE")
	print(t)
else:
	print("EXTINCAO")
	print(t)
-- EXECUTION TIME:
0.124128
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
